factory/static/stylesheets/sass/main.sass
//@import "compass"
@import "_settings.sass"
@import "foundation.css"
@import "_typography.sass"
@import "circle-graph.scss"


@mixin logo($height, $imgurl, $position, $bgsize)
	height: $height
	background-image: url($imgurl)
	background-repeat: no-repeat
	background-position: $position
	background-size: $bgsize
	position: relative
	display: flex
	min-width: 100%
	min-height: 100%
	overflow: hidden

nav 
	background-color: $nav-color
	max-height: 60px

header
	background-color: $main-color

main 
	background-color: $main-color
	padding: 20px

footer 
	background-color: $nav-color
	padding: 20px 

article
	background-color: $secondary-color
	padding-top: 5px

input
	max-width: 400px

.starlogo
	@include logo(50px, "../../img/9pointedstar.png", center, 50px 50px)

.icon
	padding: 5px
	color: $font-color-contrast

.register
	padding-left: 10px
	width: 122px

.search
	height: 1.5em

.breadcrumbs
	padding: 10px 10px
	background-color: $main-color
	margin: 0px
	li
		font-size: .75rem
	a
		color: $link-color

.date
	font-size: .75rem

.fund
	margin: 0px auto 10px auto

.box
	margin-bottom: 10px

.article-box
	margin: 5px

.home-box
	padding: 10px
	margin-bottom: 15px

.section_header
	background-color: $main-color
	padding: 20px 20px 0px 20px

.text-end
	text-align: end

.plain-list
	list-style: none
	margin-left: 0px
	a
		font-family: $font-secondary

.plain-link
	a
		text-decoration: none

.plain-button
	margin: 0px

.no-wrap
	white-space: nowrap

.off-canvas
	background-color: $nav-color
	a
		outline: none
		color: $font-color-contrast
		&:focus 
			background-color: $font-color-primary

.off-canvas-menu-item
	background-color: $nav-color
	border-bottom: 1px solid $black
	padding: 15px
	a
		color: $main-color
		text-decoration: none
	&:hover, &:focus 
		background-color: $black

.login-off-canvas
	text-align: center
	background-color: $primary-color

.news-img
	padding-left: 5px
	padding-right: 0px
	padding-bottom: 5px

.footer-row
	margin-right: 20px
	margin-left: 20px
	max-width: inherit

.copyright 
	font-size: 0.9em
	padding: 10px

/* Messages */

.message-search
	min-width: 200px

@media only screen and (min-width: 48em) //phones (small)
	.starlogo
		@include logo(50px, "../../img/BahaiFaithwithStar.png", center, 200px 40px)
	.footeraddress
		text-align: center

@media only screen and (min-width: 62em) //tablets (medium)
	.starlogo
		@include logo(50px, "../../img/BahaiFaithwithStar.png", center, 200px 40px)
	.plain-column
		padding: 0px

@media only screen and (min-width: 75em) //laptops and desktops (large)
	.starlogo
		@include logo(50px, "../../img/BahaiFaithwithStar.png", center, 200px 40px)
	

